karl package Changelog
======================

3.85 (2012-04-23)
-----------------

- Fix more bugs caused by UX1 wanting to use the name 'layout' in templates.

3.84 (2012-04-23)
-----------------

- Fix bug where rendering a template from a console script would raise an 
  exception. 

- Fix error when rendering Edit Reference Manual Page view in UX1. (LP #987257)

3.83 (2012-04-19)
-----------------

- Major work on new user interface.  Work in progress now available for use by
  KarlAdmin and other invited users.

3.82 (2012-02-28)
-----------------

- When sorting folder listings by modified date, use fine-grained sorting.
  (lp:907527)

3.81 (2012-02-03)
-----------------

- Fixed lp:920668: more efficient trash UI for deep file hierarchies.

- Implemented lp:897428: allow community moderators to delete files
  and wiki pages permanently.

3.80 (2012-01-04)
-----------------

- removed extra tal:attributes from template that caused wrong
  selected values to display

3.79 (2011-12-30)
-----------------

- Fix Chameleon 2 incompatility bugs in email_blog_entry.pt.

- Fix problem with non-ascii characters in exception error messages in both
  the error page view and the postoffice quarantine view.

3.78 (2011-12-29)
-----------------

- Switch to Chameleon 2.

3.77 (2011-12-16)
-----------------

- Fixed tag error on manage communities page.

- Fixed bug in show file view where unicode filenames could cause an
  error.

3.76 (2011-12-15)
-----------------

- Fixed LP #891278: Some links to the wiki trash were incorrect.

- Fixed LP #897435: File content needed to be reindexed on revert.

- LP #824640: Add sorting facets to advanced search view.

- LP #893767: Move 'Multi Upload' out of folder addables.

3.75 (2011-12-07)
-----------------

- Fixed LP #883250: display proper page titles on member management
  pages.

- resolve distorted pictures on people page #892357

3.74 (2011-11-17)
-----------------
